# waffle

./: .gitignore  CMakeLists.txt
waffle-lib/: CMakeLists.txt  lib.cpp  lib.h
waffle-main/: CMakeLists.txt  main.cpp
waffle-test/: CMakeLists.txt  test.cpp
